# expenses-tracker-backend

./: .gitignore  Cargo.toml  README.md  Secrets.dev.toml
.github/workflows/: ci.yaml
assets/: asset-manifest.json  index.html
assets/static/css/: 939.4535a9e7.chunk.css  939.4535a9e7.chunk.css.map  939.4c5bac4c.chunk.css  939.4c5bac4c.chunk.css.map  992.fa08bec0.chunk.css  992.fa08bec0.chunk.css.map  main.38d6455f.css  main.38d6455f.css.map  main.b0d325a6.css  main.b0d325a6.css.map
assets/static/js/: 156.68ad526b.chunk.js  156.68ad526b.chunk.js.map  167.061fe8e2.chunk.js  167.061fe8e2.chunk.js.map  167.b5ea5633.chunk.js  167.b5ea5633.chunk.js.map  240.1cbb85c7.chunk.js  251.2e93d3d6.chunk.js  251.2e93d3d6.chunk.js.map  251.5e03d74a.chunk.js  251.5e03d74a.chunk.js.map  251.9eac0a2a.chunk.js  251.9eac0a2a.chunk.js.map  453.3970b953.chunk.js  453.3970b953.chunk.js.map  572.16f3c13f.chunk.js  572.16f3c13f.chunk.js.map  572.6caa8ce1.chunk.js  572.6caa8ce1.chunk.js.map  572.744503dc.chunk.js  572.744503dc.chunk.js.map  572.774c3566.chunk.js  572.774c3566.chunk.js.map  572.af4bbc25.chunk.js  572.af4bbc25.chunk.js.map  677.8415c27e.chunk.js  677.8415c27e.chunk.js.map  800.0715b469.chunk.js  800.0715b469.chunk.js.map  800.6b5df43c.chunk.js  800.6b5df43c.chunk.js.map  800.8863151a.chunk.js  800.8863151a.chunk.js.map  800.c32d0b55.chunk.js  800.c32d0b55.chunk.js.map  800.dd3c34c8.chunk.js  800.dd3c34c8.chunk.js.map  919.1252bfc5.chunk.js  919.1252bfc5.chunk.js.map  939.3a8df684.chunk.js  (+19 more)
src/: error.rs  main.rs
src/api/: db.rs  defs.rs  mod.rs
src/api/db/: defs.rs  mod.rs
(+42 files in other folders)
