[package]
name = "expenses-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
surrealdb = "1.5.0"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["trace"] }

[env]
SURREAL_URL = "wss://expenses-tracker-ph.fly.dev"
SURREAL_USER = "destin_ecarma"
SURREAL_PASS = "bobosimark123"
SURREAL_NAMESPACE = "expenses"
SURREAL_DATABASE = "tracker"

