[package]
name = "expenses-tracker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
bcrypt = "0.15.1"
derive_more = { version = "1.0.0-beta", features = ["from"] }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
surrealdb = "=1.4.2"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["trace", "cors", "set-header", "fs"] }
tracing = "0.1.40"
